// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`start case hearing flow GET /start-case/hearing should render the date known page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - start case</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Do you know the date and time of the hearing?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="date-known" name="dateKnown" type="radio"
                                        value="yes">
                                        <label class="govuk-label govuk-radios__label" for="date-known">Yes</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="date-known-2" name="dateKnown"
                                        type="radio" value="no">
                                        <label class="govuk-label govuk-radios__label" for="date-known-2">No</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`start case hearing flow GET /start-case/hearing/confirm should render an error message when the email preview fails 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and start case</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal procedure</dt>
                    <dd class="govuk-summary-list__value">Hearing</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/start-case/select-procedure?editEntrypoint=%2Fappeals-service%2Fappeal-details%2F1%2Fstart-case%2Fselect-procedure"
                        data-cy="change-appeal-procedure">Change <span class="govuk-visually-hidden">Appeal procedure</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Do you know the date and time of the hearing?</dt>
                    <dd                     class="govuk-summary-list__value">No</dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/start-case/hearing?editEntrypoint=%2Fappeals-service%2Fappeal-details%2F1%2Fstart-case%2Fhearing"
                            data-cy="change-date-known">Change <span class="govuk-visually-hidden">Do you know the date and time of the hearing?</span></a>
                        </dd>
                </div>
            </dl>
            <p class="govuk-body" data-cy="start-timetable-info">We’ll start the timetable now and send emails to the relevant parties.</p>
            <div             class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <details class="govuk-details" data-cy="preview-email-to-appellant">
                        <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Preview email to appellant</span>
                        </summary>
                        <div class="govuk-details__text">Failed to generate email preview</div>
                    </details>
                </div>
        </div>
        <div class="govuk-grid-row">
            <div class="govuk-grid-column-full">
                <details class="govuk-details" data-cy="preview-email-to-lpa">
                    <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Preview email to LPA</span>
                    </summary>
                    <div class="govuk-details__text">Failed to generate email preview</div>
                </details>
            </div>
        </div>
        <div class="govuk-grid-row">
            <div class="govuk-grid-column-full">
                <form method="post" novalidate="novalidate">
                    <button type="submit" class="govuk-button" data-module="govuk-button">Start case</button>
                </form>
            </div>
        </div>
    </div>
    </div>
</main>"
`;

exports[`start case hearing flow GET /start-case/hearing/confirm should render the confirm page when date is known 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and start case</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal procedure</dt>
                    <dd class="govuk-summary-list__value">Hearing</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/start-case/select-procedure?editEntrypoint=%2Fappeals-service%2Fappeal-details%2F1%2Fstart-case%2Fselect-procedure"
                        data-cy="change-appeal-procedure">Change <span class="govuk-visually-hidden">Appeal procedure</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Do you know the date and time of the hearing?</dt>
                    <dd                     class="govuk-summary-list__value">Yes</dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/start-case/hearing?editEntrypoint=%2Fappeals-service%2Fappeal-details%2F1%2Fstart-case%2Fhearing"
                            data-cy="change-date-known">Change <span class="govuk-visually-hidden">Do you know the date and time of the hearing?</span></a>
                        </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Hearing date</dt>
                    <dd class="govuk-summary-list__value">1 February 3025</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/start-case/hearing/date?editEntrypoint=%2Fappeals-service%2Fappeal-details%2F1%2Fstart-case%2Fhearing%2Fdate"
                        data-cy="change-hearing-date">Change <span class="govuk-visually-hidden">Hearing date</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Hearing time</dt>
                    <dd class="govuk-summary-list__value">12:00pm</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/start-case/hearing/date?editEntrypoint=%2Fappeals-service%2Fappeal-details%2F1%2Fstart-case%2Fhearing%2Fdate"
                        data-cy="change-hearing-time">Change <span class="govuk-visually-hidden">Hearing time</span></a>
                    </dd>
                </div>
            </dl>
            <p class="govuk-body" data-cy="start-timetable-info">We’ll start the timetable now and send emails to the relevant parties.</p>
            <div             class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <details class="govuk-details" data-cy="preview-email-to-appellant">
                        <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Preview email to appellant</span>
                        </summary>
                        <div class="govuk-details__text">Rendered HTML for appellant preview</div>
                    </details>
                </div>
        </div>
        <div class="govuk-grid-row">
            <div class="govuk-grid-column-full">
                <details class="govuk-details" data-cy="preview-email-to-lpa">
                    <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Preview email to LPA</span>
                    </summary>
                    <div class="govuk-details__text">Rendered HTML for LPA preview</div>
                </details>
            </div>
        </div>
        <div class="govuk-grid-row">
            <div class="govuk-grid-column-full">
                <form method="post" novalidate="novalidate">
                    <button type="submit" class="govuk-button" data-module="govuk-button">Start case</button>
                </form>
            </div>
        </div>
    </div>
    </div>
</main>"
`;

exports[`start case hearing flow GET /start-case/hearing/confirm should render the confirm page when date is not known 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and start case</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal procedure</dt>
                    <dd class="govuk-summary-list__value">Hearing</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/start-case/select-procedure?editEntrypoint=%2Fappeals-service%2Fappeal-details%2F1%2Fstart-case%2Fselect-procedure"
                        data-cy="change-appeal-procedure">Change <span class="govuk-visually-hidden">Appeal procedure</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Do you know the date and time of the hearing?</dt>
                    <dd                     class="govuk-summary-list__value">No</dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/start-case/hearing?editEntrypoint=%2Fappeals-service%2Fappeal-details%2F1%2Fstart-case%2Fhearing"
                            data-cy="change-date-known">Change <span class="govuk-visually-hidden">Do you know the date and time of the hearing?</span></a>
                        </dd>
                </div>
            </dl>
            <p class="govuk-body" data-cy="start-timetable-info">We’ll start the timetable now and send emails to the relevant parties.</p>
            <div             class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <details class="govuk-details" data-cy="preview-email-to-appellant">
                        <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Preview email to appellant</span>
                        </summary>
                        <div class="govuk-details__text">Rendered HTML for appellant preview</div>
                    </details>
                </div>
        </div>
        <div class="govuk-grid-row">
            <div class="govuk-grid-column-full">
                <details class="govuk-details" data-cy="preview-email-to-lpa">
                    <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> Preview email to LPA</span>
                    </summary>
                    <div class="govuk-details__text">Rendered HTML for LPA preview</div>
                </details>
            </div>
        </div>
        <div class="govuk-grid-row">
            <div class="govuk-grid-column-full">
                <form method="post" novalidate="novalidate">
                    <button type="submit" class="govuk-button" data-module="govuk-button">Start case</button>
                </form>
            </div>
        </div>
    </div>
    </div>
</main>"
`;

exports[`start case hearing flow GET /start-case/hearing/date should render the date page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - start case</span>
            <h1 class="govuk-heading-l">Hearing date and time</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="hearing-date-hint">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Date</legend>
                                <div id="hearing-date-hint" class="govuk-hint">For example, 31 3 2025</div>
                                <div class="govuk-date-input" id="hearing-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="hearing-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="hearing-date-day" name="hearing-date-day" type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="hearing-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="hearing-date-month" name="hearing-date-month" type="text" value=""
                                            inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="hearing-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                            id="hearing-date-year" name="hearing-date-year" type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <fieldset class="govuk-fieldset">
                            <legend class="govuk-fieldset__legend govuk-fieldset__legend--m">Time</legend>
                            <div id="hearing-date-hint" class="govuk-hint">For example, 9:00 or 13:15</div>
                            <div class="govuk-date-input">
                                <div class="govuk-date-input__item govuk-!-margin-right-1">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label" for="hearing-time-hour">Hour</label>
                                        <input class="govuk-input govuk-input--width-2" id="hearing-time-hour"
                                        name="hearing-time-hour" type="text" value="10">
                                    </div>
                                </div>
                                <div class="govuk-date-input__item govuk-!-font-size-19 govuk-!-padding-0 govuk-!-margin-right-1">:</div>
                                <div class="govuk-date-input__item">
                                    <div class="govuk-form-group">
                                        <label class="govuk-label" for="hearing-time-minute">Minute</label>
                                        <input class="govuk-input govuk-input--width-2" id="hearing-time-minute"
                                        name="hearing-time-minute" type="text" value="00">
                                    </div>
                                </div>
                            </div>
                        </fieldset>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`start case hearing flow POST /start-case/hearing/confirm should redirect to the appeal details page when submitted 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds govuk-!-margin-bottom-5">
            <div class="govuk-notification-banner govuk-notification-banner--success govuk-!-margin-bottom-5"
            role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner"
            data-index="0">
                <div class="govuk-notification-banner__header">
                    <h3 class="govuk-notification-banner__title" id="govuk-notification-banner-title"> Success</h3>
                </div>
                <div class="govuk-notification-banner__content">
                    <p class="govuk-notification-banner__heading">Appeal started</p>
                </div>
            </div>
            <div class="govuk-notification-banner govuk-notification-banner--success govuk-!-margin-bottom-5"
            role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner"
            data-index="1">
                <div class="govuk-notification-banner__header">
                    <h3 class="govuk-notification-banner__title" id="govuk-notification-banner-title"> Success</h3>
                </div>
                <div class="govuk-notification-banner__content">
                    <p class="govuk-notification-banner__heading">Timetable started</p>
                </div>
            </div>
            <div class="govuk-notification-banner govuk-notification-banner--success govuk-!-margin-bottom-5"
            role="alert" aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner"
            data-index="2">
                <div class="govuk-notification-banner__header">
                    <h3 class="govuk-notification-banner__title" id="govuk-notification-banner-title"> Success</h3>
                </div>
                <div class="govuk-notification-banner__content">
                    <p class="govuk-notification-banner__heading">Hearing set up</p>
                </div>
            </div>
            <div class="govuk-notification-banner govuk-!-margin-bottom-5" role="region"
            aria-labelledby="govuk-notification-banner-title" data-module="govuk-notification-banner"
            data-index="3">
                <div class="govuk-notification-banner__header">
                    <h3 class="govuk-notification-banner__title" id="govuk-notification-banner-title"> Important</h3>
                </div>
                <div class="govuk-notification-banner__content"><a class="govuk-link" data-cy="add-residences-net-change" href="/appeals-service/appeal-details/1/residential-units/new?backUrl=%2Fappeals-service%2Fappeal-details%2F1">Add number of residential units</a>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-xl govuk-!-margin-bottom-3">Case details</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full"><strong class="govuk-tag govuk-tag--grey pins-status-tag--full-width govuk-!-margin-bottom-6">Received appeal</strong>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <dl class="govuk-summary-list pins-summary-list--no-border">
                <div class="govuk-summary-list__row appeal-case-officer"><dt class="govuk-summary-list__key"> Case officer</dt>
                    <dd class="govuk-summary-list__value">
                        <p class="govuk-body">Not assigned</p>
                    </dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/assign-case-officer/search-case-officer"
                        data-cy="assign-case-officer-name">Assign<span class="govuk-visually-hidden"> Case officer</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row appeal-site-address"><dt class="govuk-summary-list__key"> Site address</dt>
                    <dd class="govuk-summary-list__value">21 The Pavement, Wandsworth, SW4 0HY</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/site-address/change/1?backUrl=%2Fappeals-service%2Fappeal-details%2F1"
                        data-cy="change-site-address">Change<span class="govuk-visually-hidden"> Site address</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row appeal-local-planning-authority"><dt class="govuk-summary-list__key"> LPA</dt>
                    <dd class="govuk-summary-list__value">Wiltshire Council</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change-appeal-details/local-planning-authority"
                        data-cy="change-local-planning-authority">Change<span class="govuk-visually-hidden"> LPA</span></a>
                    </dd>
                </div>
            </dl>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <p class="govuk-body govuk-!-margin-bottom-6" id="download-case-files"
            data-cy="download-case-files"><a class="govuk-link" href="/documents/1/bulk-download/case-APP/Q9999/D/21/351062.zip">Download case</a>
            </p>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-full">
            <details class="govuk-details">
                <summary class="govuk-details__summary"><span class="govuk-details__summary-text"> 2 case notes</span>
                </summary>
                <div class="govuk-details__text">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-grid-row">
                            <div class="govuk-grid-column-two-thirds">
                                <div class="govuk-form-group govuk-character-count" data-module="govuk-character-count"
                                data-maxlength="500">
                                    <textarea class="govuk-textarea govuk-js-character-count" id="comment"
                                    name="comment" rows="5" aria-describedby="comment-info"></textarea>
                                    <div id="comment-info" class="govuk-hint govuk-character-count__message">You can enter up to 500 characters</div>
                                </div>
                            </div>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button govuk-button--secondary govuk-!-margin-bottom-1"
                        data-module="govuk-button">Add case note</button>
                    </form>
                    <div>
                        <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
                        <section>
                            <p class="govuk-body govuk-!-margin-bottom-1">A case note you should see.</p>
                            <p class="govuk-hint govuk-!-margin-bottom-6">11:00am on Tuesday 1 October 2024 by Smith, John</p>
                            <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
                        </section>
                        <section>
                            <p class="govuk-body govuk-!-margin-bottom-1">A case note you should see.</p>
                            <p class="govuk-hint govuk-!-margin-bottom-6">11:00am on Tuesday 1 October 2024 by Smith, John</p>
                            <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
                        </section>
                    </div>
                </div>
            </details>
        </div>
    </div>
    <h2 class="govuk-heading-l">Overview</h2>
    <dl class="govuk-summary-list">
        <div class="govuk-summary-list__row govuk-summary-list__row--no-actions appeal-lpa-reference"><dt class="govuk-summary-list__key"> Planning application reference</dt>
            <dd             class="govuk-summary-list__value">48269/APP/2021/1482</dd>
        </div>
        <div class="govuk-summary-list__row appeal-appeal-type"><dt class="govuk-summary-list__key"> Appeal type</dt>
            <dd class="govuk-summary-list__value">Planning appeal</dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change-appeal-type/appeal-type"
                data-cy="change-appeal-type">Change<span class="govuk-visually-hidden"> Appeal type</span></a>
            </dd>
        </div>
        <div class="govuk-summary-list__row appeal-case-procedure"><dt class="govuk-summary-list__key"> Appeal procedure</dt>
            <dd class="govuk-summary-list__value">Written</dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change-appeal-procedure-type/change-selected-procedure-type"
                data-cy="change-case-procedure">Change<span class="govuk-visually-hidden"> Appeal procedure</span></a>
            </dd>
        </div>
        <div class="govuk-summary-list__row appeal-allocation-details"><dt class="govuk-summary-list__key"> Allocation level</dt>
            <dd class="govuk-summary-list__value">
                <div class="govuk-!-margin-0">Level: A</div>
                <ul class="govuk-!-margin-0">
                    <li>Historic heritage</li>
                    <li>Architecture design</li>
                </ul>
            </dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/allocation-details/allocation-level"
                data-cy="change-allocation-details">Change<span class="govuk-visually-hidden"> Allocation level</span></a>
            </dd>
        </div>
        <div class="govuk-summary-list__row appeal-linked-appeals"><dt class="govuk-summary-list__key"> Linked appeals</dt>
            <dd class="govuk-summary-list__value"><span>No linked appeals</span>
            </dd>
        </div>
        <div class="govuk-summary-list__row appeal-other-appeals"><dt class="govuk-summary-list__key"> Related appeals</dt>
            <dd class="govuk-summary-list__value"><span>No</span>
            </dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/other-appeals/add"
                data-cy="add-related-appeals">Add<span class="govuk-visually-hidden"> Related appeals</span></a>
            </dd>
        </div>
        <div class="govuk-summary-list__row appeal-net-residence-change"><dt class="govuk-summary-list__key"> Is there a net gain or loss of residential units?</dt>
            <dd             class="govuk-summary-list__value">Not provided</dd>
                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/residential-units/new?backUrl=%2Fappeals-service%2Fappeal-details%2F1"
                    data-cy="add-net-residence-change">Add<span class="govuk-visually-hidden"> Is there a net gain or loss of residential units?</span></a>
                </dd>
        </div>
    </dl>
    <h2 class="govuk-heading-l">Timetable<dl class="govuk-summary-list appeal-case-timetable"><div class="govuk-summary-list__row appeal-valid-date"><dt class="govuk-summary-list__key"> Valid date</dt><dd class="govuk-summary-list__value"> 23 May 2023</dd><dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/appellant-case/valid/date" data-cy="-valid-date"><span class="govuk-visually-hidden"> Valid date</span></a></dd></div><div class="govuk-summary-list__row appeal-start-date"><dt class="govuk-summary-list__key"> Start date</dt><dd class="govuk-summary-list__value"> Not started</dd><dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/start-case/add?backUrl=/appeals-service/appeal-details/1" data-cy="start-start-case-date">Start<span class="govuk-visually-hidden"> Start date</span></a></dd></div></dl></h2>
    <h2 class="govuk-heading-l">Documentation</h2>
    <table class="govuk-table">
        <thead class="govuk-table__head">
            <tr class="govuk-table__row">
                <th scope="col" class="govuk-table__header">Documentation</th>
                <th scope="col" class="govuk-table__header">Status</th>
                <th scope="col" class="govuk-table__header">Date</th>
                <th scope="col" class="govuk-table__header govuk-!-text-align-right">Action</th>
            </tr>
        </thead>
        <tbody class="govuk-table__body">
            <tr class="govuk-table__row">
                <th scope="row" class="govuk-table__header">Appeal</th>
                <td class="govuk-table__cell">Ready to review</td>
                <td class="govuk-table__cell">2 August 2024</td>
                <td class="govuk-table__cell govuk-!-text-align-right"><a href="/appeals-service/appeal-details/1/appellant-case?backUrl=%2Fappeals-service%2Fappeal-details%2F1"
                    data-cy="review-appellant-case" class="govuk-link">Review<span class="govuk-visually-hidden"> appellant case</span></a>
                </td>
            </tr>
            <tr class="govuk-table__row">
                <th scope="row" class="govuk-table__header">LPA questionnaire</th>
                <td class="govuk-table__cell">Awaiting start date</td>
                <td class="govuk-table__cell">Not applicable</td>
                <td class="govuk-table__cell govuk-!-text-align-right"></td>
            </tr>
            <tr class="govuk-table__row">
                <th scope="row" class="govuk-table__header">LPA statement</th>
                <td class="govuk-table__cell">Awaiting start date</td>
                <td class="govuk-table__cell">Not applicable</td>
                <td class="govuk-table__cell govuk-!-text-align-right"><a href="/appeals-service/appeal-details/1/lpa-statement/add-document?backUrl=%2Fappeals-service%2Fappeal-details%2F1"
                    data-cy="add-lpa-statement" class="govuk-link"> Add<span class="govuk-visually-hidden"> LPA statement</span></a>
                </td>
            </tr>
            <tr class="govuk-table__row">
                <th scope="row" class="govuk-table__header">Interested party comments</th>
                <td class="govuk-table__cell">Awaiting start date</td>
                <td class="govuk-table__cell">Not applicable</td>
                <td class="govuk-table__cell govuk-!-text-align-right"><a href="/appeals-service/appeal-details/1/interested-party-comments?backUrl=%2Fappeals-service%2Fappeal-details%2F1"
                    data-cy="review-ip-comments" class="govuk-link">View<span class="govuk-visually-hidden"> interested party comments</span></a>
                </td>
            </tr>
            <tr class="govuk-table__row">
                <th scope="row" class="govuk-table__header">Appellant final comments</th>
                <td class="govuk-table__cell">Awaiting start date</td>
                <td class="govuk-table__cell">Not applicable</td>
                <td class="govuk-table__cell govuk-!-text-align-right"><a href="/appeals-service/appeal-details/1/final-comments/appellant/add-document?backUrl=%2Fappeals-service%2Fappeal-details%2F1"
                    data-cy="add-appellant-final-comments" class="govuk-link"> Add<span class="govuk-visually-hidden"> Appellant final comments</span></a>
                </td>
            </tr>
            <tr class="govuk-table__row">
                <th scope="row" class="govuk-table__header">LPA final comments</th>
                <td class="govuk-table__cell">Awaiting start date</td>
                <td class="govuk-table__cell">Not applicable</td>
                <td class="govuk-table__cell govuk-!-text-align-right"><a href="/appeals-service/appeal-details/1/final-comments/lpa/add-document?backUrl=%2Fappeals-service%2Fappeal-details%2F1"
                    data-cy="add-lpa-final-comments" class="govuk-link"> Add<span class="govuk-visually-hidden"> LPA final comments</span></a>
                </td>
            </tr>
        </tbody>
    </table>
    <h2 class="govuk-heading-l">Costs</h2>
    <table class="govuk-table">
        <thead class="govuk-table__head">
            <tr class="govuk-table__row">
                <th scope="col" class="govuk-table__header">Documentation</th>
                <th scope="col" class="govuk-table__header">Status</th>
                <th scope="col" class="govuk-table__header govuk-!-text-align-right">Action</th>
            </tr>
        </thead>
        <tbody class="govuk-table__body">
            <tr class="govuk-table__row">
                <th scope="row" class="govuk-table__header appeal-costs-appellant-application-documentation">Appellant application</th>
                <td class="govuk-table__cell appeal-costs-appellant-application-status">No documents available</td>
                <td class="govuk-table__cell appeal-costs-appellant-application-actions govuk-!-text-align-right">
                    <ul class="govuk-summary-list__actions-list">
                        <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" data-cy="add-costs-appellant-application" href="/appeals-service/appeal-details/1/costs/appellant/application/upload-documents/1">Add<span class="govuk-visually-hidden"> Appellant application</span></a>
                        </li>
                    </ul>
                </td>
            </tr>
            <tr class="govuk-table__row">
                <th scope="row" class="govuk-table__header appeal-costs-appellant-withdrawal-documentation">Appellant withdrawal</th>
                <td class="govuk-table__cell appeal-costs-appellant-withdrawal-status">No documents available</td>
                <td class="govuk-table__cell appeal-costs-appellant-withdrawal-actions govuk-!-text-align-right">
                    <ul class="govuk-summary-list__actions-list">
                        <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" data-cy="add-costs-appellant-withdrawal" href="/appeals-service/appeal-details/1/costs/appellant/withdrawal/upload-documents/2">Add<span class="govuk-visually-hidden"> Appellant withdrawal</span></a>
                        </li>
                    </ul>
                </td>
            </tr>
            <tr class="govuk-table__row">
                <th scope="row" class="govuk-table__header appeal-costs-appellant-correspondence-documentation">Appellant correspondence</th>
                <td class="govuk-table__cell appeal-costs-appellant-correspondence-status">No documents available</td>
                <td class="govuk-table__cell appeal-costs-appellant-correspondence-actions govuk-!-text-align-right">
                    <ul class="govuk-summary-list__actions-list">
                        <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" data-cy="add-costs-appellant-correspondence" href="/appeals-service/appeal-details/1/costs/appellant/correspondence/upload-documents/3">Add<span class="govuk-visually-hidden"> Appellant correspondence</span></a>
                        </li>
                    </ul>
                </td>
            </tr>
            <tr class="govuk-table__row">
                <th scope="row" class="govuk-table__header appeal-costs-lpa-application-documentation">LPA application</th>
                <td class="govuk-table__cell appeal-costs-lpa-application-status">No documents available</td>
                <td class="govuk-table__cell appeal-costs-lpa-application-actions govuk-!-text-align-right">
                    <ul class="govuk-summary-list__actions-list">
                        <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" data-cy="add-costs-lpa-application" href="/appeals-service/appeal-details/1/costs/lpa/application/upload-documents/4">Add<span class="govuk-visually-hidden"> LPA application</span></a>
                        </li>
                    </ul>
                </td>
            </tr>
            <tr class="govuk-table__row">
                <th scope="row" class="govuk-table__header appeal-costs-lpa-withdrawal-documentation">LPA withdrawal</th>
                <td class="govuk-table__cell appeal-costs-lpa-withdrawal-status">No documents available</td>
                <td class="govuk-table__cell appeal-costs-lpa-withdrawal-actions govuk-!-text-align-right">
                    <ul class="govuk-summary-list__actions-list">
                        <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" data-cy="add-costs-lpa-withdrawal" href="/appeals-service/appeal-details/1/costs/lpa/withdrawal/upload-documents/5">Add<span class="govuk-visually-hidden"> LPA withdrawal</span></a>
                        </li>
                    </ul>
                </td>
            </tr>
            <tr class="govuk-table__row">
                <th scope="row" class="govuk-table__header appeal-costs-lpa-correspondence-documentation">LPA correspondence</th>
                <td class="govuk-table__cell appeal-costs-lpa-correspondence-status">No documents available</td>
                <td class="govuk-table__cell appeal-costs-lpa-correspondence-actions govuk-!-text-align-right">
                    <ul class="govuk-summary-list__actions-list">
                        <li class="govuk-summary-list__actions-list-item"><a class="govuk-link" data-cy="add-costs-lpa-correspondence" href="/appeals-service/appeal-details/1/costs/lpa/correspondence/upload-documents/6">Add<span class="govuk-visually-hidden"> LPA correspondence</span></a>
                        </li>
                    </ul>
                </td>
            </tr>
        </tbody>
    </table>
    <h2 class="govuk-heading-l">Contacts</h2>
    <dl class="govuk-summary-list">
        <div class="govuk-summary-list__row appeal-appellant"><dt class="govuk-summary-list__key"> Appellant</dt>
            <dd class="govuk-summary-list__value">
                <ul class="govuk-list">
                    <li>Roger Simmons</li>
                </ul>
            </dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/service-user/change/appellant"
                data-cy="change-appellant">Change<span class="govuk-visually-hidden"> Appellant</span></a>
            </dd>
        </div>
        <div class="govuk-summary-list__row appeal-agent"><dt class="govuk-summary-list__key"> Agent</dt>
            <dd class="govuk-summary-list__value">
                <ul class="govuk-list">
                    <li>Fiona Shell</li>
                    <li>test2@example.com</li>
                </ul>
            </dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/service-user/change/agent"
                data-cy="change-agent">Change<span class="govuk-visually-hidden"> Agent</span></a>
            </dd>
        </div>
        <div class="govuk-summary-list__row appeal-lpa-contact-details"><dt class="govuk-summary-list__key"> LPA</dt>
            <dd class="govuk-summary-list__value">
                <ul class="govuk-list">
                    <li>Wiltshire Council</li>
                    <li>wilt@lpa-email.gov.uk</li>
                </ul>
            </dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change-appeal-details/local-planning-authority"
                data-cy="change-lpa-contact-details">Change<span class="govuk-visually-hidden"> Local planning authority (LPA)</span></a>
            </dd>
        </div>
        <div class="govuk-summary-list__row appeal-rule-6-party-contact-details"><dt class="govuk-summary-list__key"> Rule 6 parties</dt>
            <dd class="govuk-summary-list__value">No rule 6 party</dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/rule-6-parties/add?backUrl=%2Fappeals-service%2Fappeal-details%2F1"
                data-cy="add-rule-6-party-contact-details">Add<span class="govuk-visually-hidden"> Rule 6 parties</span></a>
            </dd>
        </div>
    </dl>
    <h2 class="govuk-heading-l">Team</h2>
    <dl class="govuk-summary-list">
        <div class="govuk-summary-list__row appeal-case-team"><dt class="govuk-summary-list__key"> Case team</dt>
            <dd class="govuk-summary-list__value">
                <ul class="govuk-list">
                    <li>Test Team</li>
                    <li>test@emai.com</li>
                </ul>
            </dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/case-team/edit"
                data-cy="change-case-team">Change<span class="govuk-visually-hidden"> Case team</span></a>
            </dd>
        </div>
        <div class="govuk-summary-list__row appeal-case-officer"><dt class="govuk-summary-list__key"> Case officer</dt>
            <dd class="govuk-summary-list__value">
                <p class="govuk-body">Not assigned</p>
            </dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/assign-case-officer/search-case-officer"
                data-cy="assign-case-officer">Assign<span class="govuk-visually-hidden"> Case officer</span></a>
            </dd>
        </div>
        <div class="govuk-summary-list__row appeal-inspector"><dt class="govuk-summary-list__key"> Inspector</dt>
            <dd class="govuk-summary-list__value">
                <p class="govuk-body">Not assigned</p>
            </dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/assign-inspector/search-inspector"
                data-cy="assign-inspector">Assign<span class="govuk-visually-hidden"> Inspector</span></a>
            </dd>
        </div>
    </dl>
    <h2 class="govuk-heading-l">Case management</h2>
    <dl class="govuk-summary-list">
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Cross-team correspondence</dt>
            <dd             class="govuk-summary-list__value">No documents</dd>
                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/internal-correspondence/cross-team/upload-documents/10"
                    data-cy="add-cross-team-correspondence">Add<span class="govuk-visually-hidden"> Cross-team correspondence</span></a>
                </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Inspector correspondence</dt>
            <dd             class="govuk-summary-list__value">No documents</dd>
                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/internal-correspondence/inspector/upload-documents/11"
                    data-cy="add-inspector-correspondence">Add<span class="govuk-visually-hidden"> Inspector correspondence</span></a>
                </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Main party correspondence</dt>
            <dd             class="govuk-summary-list__value">No documents</dd>
                <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/internal-correspondence/main-party/upload-documents/22"
                    data-cy="add-main-party-correspondence">Add<span class="govuk-visually-hidden"> Main party correspondence</span></a>
                </dd>
        </div>
        <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Case history</dt>
            <dd class="govuk-summary-list__value"></dd>
            <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/audit" data-cy="view-case-history">View<span class="govuk-visually-hidden"> Case history</span></a>
            </dd>
        </div>
    </dl>
    <div id="case-details-cancel-section">
        <h3 class="govuk-heading-m">Cancel appeal</h3>
        <div>
            <p><a id="cancelCase" class="govuk-body govuk-link" href="/appeals-service/appeal-details/1/cancel">Cancel appeal</a>
            </p>
        </div>
    </div>
</main>"
`;
